Fixes issue #9, copy/pasting or writing a lot in the editor textarea doesn't break the layout anymore.

--- a/application/static/css/scribeui.css
+++ b/application/static/css/scribeui.css
@@ -442,7 +442,7 @@ a{
 .main-right {
     float: left;
 	position:relative;
-	top:-30px;
+	top:0px;
     width: 58%;
     height: 100%;
 }
@@ -450,7 +450,7 @@ a{
 .map {
     width: 100%;
 	position:absolute;
-	top:30px;
+	top:0px;
 	bottom:30px;
 	right:0;
 	left:0;
